# location-clustering

./: README.md  document.docx
backend/: .gitignore  pyproject.toml  requirements.txt
backend/data/njfb/: graph.osm  input.xlsx  output.xlsx
backend/data/original/: input.xlsx
backend/src/app/: main.py
docs/: benchmark.txt  document.docx
frontend/: .env.local  .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html  output.xlsx
frontend/src/: api.ts  app.tsx  index.css  index.tsx  model.ts  neshan.tsx
