[tool.poetry]
name = "ai_project"
version = "1.0.0"
description = "This is an AI project."
authors = ["Sadra Samadi <sadra.smd@gmail.com>"]
readme = "README.md"
packages = [{ include = "app", from = "src" }]
include = ["data"]

[tool.poetry.scripts]
main = "app.main:run"

[tool.poetry.dependencies]
geopandas = "^0.12.1"
matplotlib = "^3.6.2"
numpy = "^1.23.4"
openpyxl = "^3.0.10"
osmnx = "^1.2.2"
pandas = "^1.5.1"
pyclustering = "^0.10.1.2"
python = "^3.8"
scikit-learn = "^1.1.3"
shapely = "^1.8.5.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
